--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "mcpfinal",
+  "name": "mcp-agent-system",
   "version": "1.0.0",
-  "description": "MCP Client with Multi-Agent System",
+  "description": "Multi-agent system for managing MCP servers with AI",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsc && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:api": "node dist/index.js --api",
+    "dev": "tsc -w",
+    "dev:api": "nodemon --exec \"node dist/index.js --api\""
   },
-  "keywords": ["mcp", "model-context-protocol", "agents"],
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "agents"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
-    "@types/node": "^22.14.0",
-    "openai": "^4.28.4",
-    "typescript": "^5.8.3",
-    "zod": "^3.24.2"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.0",
+    "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^9.0.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "openai": "^4.93.0",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "typescript": "^5.3.3"
   }
 }
