--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,50 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+/venv/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+!.env.example
+
+# MCP Registry files
+.mcp-registry/*
+!.mcp-registry/mcp-registry-entries.json
+!.mcp-registry/credentials.json
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Test coverage
+/coverage/
+
+# Docker
+.docker/
